Added sum method, updated swagger and migrations
